Fixed label alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-.form-check .opt {
+.opt {
   position: absolute;
   top: 0;
   left: 0;
